(In [14764]) * Completly untested G726 support for liveMedia. refs #601 (closed)
If anyone has access to such a stream, please test this. The AXIS 241QA has this for instance.
I still can't figure out, how to save the output of my video camera to a file -- without alterations or transcoding. When, using vlc-1.1.10, I try, for example:
...[0x826417e70] main stream output debug: adding a new sout input (sout_input:0x8265d07a0)[0x82641cdf0] main mux debug: adding a new input[0x82641cdf0] mux_ts mux debug: adding input codec=g726 pid=68[0x82641cdf0] main mux error: cannot add this stream[0x826478070] main decoder error: cannot create packetizer output (g726)...
➜ vlc --vlm-conf vlm.conf...[0x101f19c50] main mux error: cannot add this stream[0x10027b8e0] stream_out_rtp stream out error: cannot add this stream to the muxer[0x10201ccf0] [Media: cam5] main decoder error: cannot create packetizer output (g726