* Completly untested G726 support for liveMedia. refs #601   If anyone has access to such a stream, please test this. The AXIS 241QA has this for instance.

See also: http://forum.videolan.org/viewtopic.php?t=18287&start=0&postdays=0&postorder=asc&highlight=g726